# nanodisort

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  DISOTEST_ANALYSIS.md  README.md  REUSE.toml  TODO.md  pyproject.toml
.github/workflows/: build.yml  docs.yml  lint.yml  test.yml
benchmarks/: benchmark_batch.py  pytest.ini
docs/: api.rst  conf.py  dev.rst  index.rst  references.bib  requirements.txt
docs/api/: index.rst  nanodisort.rst  nanodisort.utils.phase_functions.rst
docs/examples/: getting_started.ipynb
ext/cdisort-2.1.3/: cdisort.c  cdisort.h
src/nanodisort/: __init__.py  _core.cpp  _version.py  thread_pool.cpp  thread_pool.h
src/nanodisort/utils/: __init__.py  phase_functions.py
tests/: __init__.py  conftest.py  test_batch.py  test_core.py  test_disotest.py  test_error_handling.py
