[project]
name = "nanodisort"
version = "0.1.0"
description = "Python bindings for cdisort radiative transfer solver"
readme = "README.md"
authors = [
    { name = "Vincent Leroy", email = "vincent.leroy@rayference.eu" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "taskipy>=1.12.0",
]
docs = [
    "sphinx>=7.0",
    "shibuya>=2024.0",
    "numpydoc>=1.5",
]

[build-system]
requires = ["scikit-build-core>=0.8.0", "nanobind>=1.9.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.8"
build-dir = "build/{wheel_tag}"
cmake.verbose = true
wheel.packages = ["src/nanodisort"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["nanodisort"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "NPY",    # numpy-specific rules
    "RUF",    # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.taskipy.tasks]
# Development tasks
test = "pytest"
test-cov = "pytest --cov=nanodisort --cov-report=term-missing --cov-report=html"
lint = "ruff check src tests"
format = "ruff format src tests"
format-check = "ruff format --check src tests"
check = "ruff check src tests && ruff format --check src tests"

# Build tasks
build = "uv build"
clean = "rm -rf build dist .pytest_cache .coverage htmlcov"

# Documentation tasks
docs = "sphinx-build -b html docs docs/_build/html"
docs-clean = "rm -rf docs/_build"
