[project]
name = "nanodisort"
version = "0.1.0.dev1"
description = "Python bindings for the CDISORT radiative transfer solver"
readme = "README.md"
authors = [{ name = "Vincent Leroy", email = "vincent.leroy@rayference.eu" }]
requires-python = ">=3.9,<3.14"
dependencies = ["numpy>=1.20"]
license = { text = "GPL-3.0-or-later" }
keywords = ["radiative transfer", "atmosphere", "DISORT", "remote sensing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/eradiate/nanodisort"
Repository = "https://github.com/eradiate/nanodisort"
Documentation = "https://nanodisort.readthedocs.io"
"Bug Tracker" = "https://github.com/eradiate/nanodisort/issues"
Changelog = "https://github.com/eradiate/nanodisort/blob/main/CHANGELOG.md"

[dependency-groups]
docs = [
  "sphinx>=7.0,<9.0",
  "shibuya>=2024.0",
  "sphinx-autobuild>=2024.0",
  "sphinxcontrib-bibtex>=2.6.0",
]
build = ["nanobind>=2.9.0", "scikit-build-core>=0.11.0"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
benchmark = ["pytest-benchmark"]
dev = [
  "ipykernel>=6.31.0",
  "jupyterlab",
  "nanobind>=2.9.2",
  "nbsphinx>=0.9.0",
  "ruff>=0.1.0",
  "sphinx-copybutton>=0.5.2",
  "taskipy>=1.12.0",
  { include-group = "build" },
  { include-group = "docs" },
  { include-group = "test" },
  { include-group = "benchmark" },
]

[build-system]
requires = ["scikit-build-core>=0.11.0", "nanobind>=2.9.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.11"
build-dir = "build/{wheel_tag}"
build.verbose = true
editable.mode = "redirect"
install.components = ["python"]
wheel.packages = ["src/nanodisort"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"

[tool.uv]
no-build-isolation-package = ["nanodisort"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
  "--tb=short",
  "-p no:benchmark",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["nanodisort"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = ["pp*", "*-musllinux_*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.13" }

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "I"]

[tool.taskipy.tasks]
# Development tasks
test = "pytest"
test-cov = "pytest --cov=nanodisort --cov-report=term-missing --cov-report=html"
lint = "ruff check src tests"
format = "ruff format src tests"
format-check = "ruff format --check src tests"
check = "ruff check src tests && ruff format --check src tests"
benchmark = { cmd = "pytest benchmarks", cwd = "." }

# Build tasks
build = "uv build"
clean = "rm -rf build dist .pytest_cache .coverage htmlcov"

# Documentation tasks
docs = "sphinx-build -b html docs docs/_build/html"
docs-serve = "sphinx-autobuild -b html docs docs/_build/html"
docs-clean = "rm -rf docs/_build"
